--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,24 @@ dependencyManagement {
 	}
 }
 
+bootBuildImage {
+	imageName = "${project.name}"
+	environment = ["BP_JVM_VERSION": "17.*"]
+
+	if (System.getProperty( "os.arch" ).toLowerCase().startsWith('aarch')) {
+		builder = "ghcr.io/thomasvitale/java-builder-arm64"
+	}
+	builder = "paketobuildpacks/builder:tiny"
+
+	docker {
+		publishRegistry {
+			username = project.findProperty("registryUsername")
+			password = project.findProperty("registryToken")
+			url = project.findProperty("registryUrl")
+		}
+	}
+}
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
