--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -8,7 +8,7 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      app: dispatcher-label
+      app: dispatcher-service
   template:
     metadata:
       labels:
@@ -21,7 +21,7 @@ spec:
           lifecycle:
             preStop:
               exec:
-                command: ["sh", "-c", "sleep 5"]
+                command: [ "sh", "-c", "sleep 5" ]
           ports:
             - containerPort: 9003
           env:
